--- a/css/styles.css
+++ b/css/styles.css
@@ -81,8 +81,8 @@
 /* @media screen and (max-width: 1024px) {
     .main-nav ul {
         display: none; */
-        /* Cache les liens sur petit écran */
-    /* }
+/* Cache les liens sur petit écran */
+/* }
 
     .burger-icon {
         display: flex;
@@ -92,8 +92,8 @@
 /* Icône burger (pour le futur) */
 /* .burger-icon {
     display: none; */
-    /* Désactivé par défaut */
-    /* flex-direction: column;
+/* Désactivé par défaut */
+/* flex-direction: column;
     cursor: pointer;
 }
 
@@ -106,121 +106,121 @@
 } */
 
 
- /* Fond spatial */
- #space-background {
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100vw;
-     height: 100vh;
-     background-color: #001820;
-     overflow: hidden;
-     z-index: -1;
- }
+/* Fond spatial */
+#space-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #001820;
+    overflow: hidden;
+    z-index: -1;
+}
 
- #stars .star {
-     position: absolute;
-     width: 2px;
-     height: 2px;
-     background-color: white;
-     border-radius: 50%;
-     animation: glow 2s infinite alternate;
- }
+#stars .star {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background-color: white;
+    border-radius: 50%;
+    animation: glow 2s infinite alternate;
+}
 
- @keyframes glow {
-     from {
-         opacity: 0.8;
-     }
+@keyframes glow {
+    from {
+        opacity: 0.8;
+    }
 
-     to {
-         opacity: 0.3;
-     }
- }
+    to {
+        opacity: 0.3;
+    }
+}
 
- /* Étoiles filantes */
- #shooting-stars {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     pointer-events: none;
- }
-
-
- /* Contenu principal */
- #main-content {
-     position: relative;
-     z-index: 1;
-     text-align: center;
-     color: #FFFFFF;
-     font-family: 'Arial', sans-serif;
-     padding: 50px;
-     margin-top: 20vh;
- }
-
- #main-content h1 {
-     font-size: 3rem;
-     line-height: 1.5;
-     color: #FFFFFF;
-     margin-bottom: 10px;
- }
-
- #main-content h1 span {
-     display: block;
-     font-size: 2rem;
-     color: #FFFFFF;
- }
-
- #main-content h1 strong {
-     font-size: 3.5rem;
-     color: #FFFFFF;
- }
-
- #main-content p {
-     font-size: 1.2rem;
-     color: #FFFFFF;
-     margin-bottom: 30px;
- }
+/* Étoiles filantes */
+#shooting-stars {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
 
 
+/* Contenu principal */
+#main-content {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: 'Arial', sans-serif;
+    padding: 50px;
+    margin-top: 20vh;
+}
+
+#main-content h1 {
+    font-size: 3rem;
+    line-height: 1.5;
+    color: #FFFFFF;
+    margin-bottom: 10px;
+}
+
+#main-content h1 span {
+    display: block;
+    font-size: 2rem;
+    color: #FFFFFF;
+}
+
+#main-content h1 strong {
+    font-size: 3.5rem;
+    color: #FFFFFF;
+}
+
+#main-content p {
+    font-size: 1.2rem;
+    color: #FFFFFF;
+    margin-bottom: 30px;
+}
 
 
 
 
- /* Boutons */
- .buttons {
-     display: flex;
-     justify-content: center;
-     gap: 15px;
- }
 
- .btn {
-     padding: 15px 25px;
-     border-radius: 25px;
-     text-decoration: none;
-     font-size: 1rem;
-     transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
-     display: inline-block;
- }
 
- .btn-primary {
-     background: white;
-     color: #001820;
-     box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.5);
- }
+/* Boutons */
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
 
- .btn-secondary {
-     border: 2px solid white;
-     background: transparent;
-     color: white;
-     box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.5);
- }
+.btn {
+    padding: 15px 25px;
+    border-radius: 25px;
+    text-decoration: none;
+    font-size: 1rem;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+    display: inline-block;
+}
 
- .btn:hover {
-     transform: translateY(-5px);
-     box-shadow: 0px 8px 20px rgba(255, 255, 255, 0.7);
- }
+.btn-primary {
+    background: white;
+    color: #001820;
+    box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.5);
+}
+
+.btn-secondary {
+    border: 2px solid white;
+    background: transparent;
+    color: white;
+    box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.5);
+}
+
+.btn:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 8px 20px rgba(255, 255, 255, 0.7);
+}
 
 
 
@@ -247,7 +247,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 100px 0; /* Ajuste la marge verticale */
+    margin: 100px 0;
+    /* Ajuste la marge verticale */
 }
 
 
@@ -544,6 +545,43 @@
     line-height: 1.6;
     color: #444;
 }
+
+
+.project-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.project-card {
+    background: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.project-card img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.project-filters button {
+    margin-right: 10px;
+    padding: 8px 12px;
+    cursor: pointer;
+    border: none;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.project-filters button:hover {
+    background-color: #555;
+}
+
+
+
 
 /* Footer principal */
 #main-footer {
